# Feira-Garanca-2026

./: LICENSE  Makefile  README.md  config.py  interfaces.py  modelo.json  pyproject.toml
modelador/: arena.json  main.py  recebidor.py  renderizador.cpp
robo/: enviador.py  interfaces.py  main.py  mapeador.py  mapeador.txt  movimentador.py
